--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.42.1",
     "swiper": "^6.8.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "react-messenger-customer-chat": "^0.8.0"
   },
   "scripts": {
     "start": "craco start",
