--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 WatchWebsite_TLCN/WatchWebsite_TLCN/obj/Debug/netcoreapp3.1/WatchWebsite_TLCN.pdb
 WatchWebsite_TLCN/WatchWebsite_TLCN/obj/Debug/netcoreapp3.1/WatchWebsite_TLCN.pdb
+!iceberg/static/icon
