--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "antd": "^4.16.13",
     "craco-less": "^1.20.0",
     "enzyme": "^3.11.0",
+    "firebase": "^9.6.11",
     "jest-react-hooks-shallow": "^1.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -28,8 +30,7 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.42.1",
     "swiper": "^6.8.4",
-    "web-vitals": "^1.1.2",
-    "react-messenger-customer-chat": "^0.8.0"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "craco start",
