--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "jest-react-hooks-shallow": "^1.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
     "react-messenger-customer-chat": "^0.8.0",
     "react-redux": "^7.2.5",
