--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,10 @@
     "jest-react-hooks-shallow": "^1.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-ga": "^3.3.0",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
-    "react-facebook-login": "^4.1.1",
     "react-messenger-customer-chat": "^0.8.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
