--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,8 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.42.1",
     "swiper": "^6.8.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "mapbox-gl": "^2.8.1"
   },
   "scripts": {
     "start": "craco start",
