--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "enzyme": "^3.11.0",
     "firebase": "^9.6.11",
     "jest-react-hooks-shallow": "^1.5.1",
+    "mapbox-gl": "^2.8.1",
     "react": "^17.0.2",
+    "react-chat-window": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-ga": "^3.3.0",
@@ -33,8 +35,7 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.42.1",
     "swiper": "^6.8.4",
-    "web-vitals": "^1.1.2",
-    "mapbox-gl": "^2.8.1"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "craco start",
