--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-facebook-login": "^4.1.1",
     "react-ga": "^3.3.0",
     "react-google-login": "^5.2.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-messenger-chat-plugin": "^3.0.5",
     "react-redux": "^7.2.5",
